--- a/libros/libro1.html
+++ b/libros/libro1.html
@@ -22,7 +22,7 @@
 
     html, body {
       height: 100%;
-      background-color:#ffffff no-repeat center center fixed;
+      background:#ffffff no-repeat center center fixed;
       background-size: cover;
       font-family: 'Times New Roman', monospace;
       color: var(--texto);
