--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   </main>
 
   <footer>
-    &copy; 2025 Mis Libros | Todos los derechos reservados.
+    &copy; 2025 Sarah | Todos los derechos reservados.
   </footer>
 
 </body>
